force-app/main/default/objects/Clase_de_cohorte__c/Clase_de_cohorte__c.object-meta.xml
<CustomObject>
    <description>Registro de clase que es asignada a una cohorte</description>
    <label>Clase de cohorte</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Nombre de Clase de cohorte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clases de cohorte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>