force-app/main/default/objects/Clase_de_cohorte__c/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <description>Clase que va ser asociada a la cohorte</description>
    <label>Clase</label>
    <referenceTo>Clase__c</referenceTo>
    <relationshipLabel>Clases de cohorte</relationshipLabel>
    <relationshipName>Clases_de_cohorte</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>