force-app/main/default/objects/Clase_de_cohorte__c/fields/Cohorte__c.field-meta.xml
<CustomField>
    <fullName>Cohorte__c</fullName>
    <description>Cohorte a la que se le asignan clases</description>
    <label>Cohorte</label>
    <referenceTo>Cohorte__c</referenceTo>
    <relationshipLabel>Clases de cohorte</relationshipLabel>
    <relationshipName>Clases_de_cohorte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>