force-app/main/default/objects/Clase_de_cohorte__c/fields/Completada__c.field-meta.xml
<CustomField>
    <fullName>Completada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Una vez el contenido de la clase ha sido dictada debe marcarse como completada</description>
    <label>¿Completada?</label>
    <type>Checkbox</type>
</CustomField>